@@ -13,4 +13,4 @@
 {{ gamma["b"] +}}
 {{ gamma["c"] +}}
 {{ gamma["d"] +}}
-{{ r@z +}}
+{{ a@z +}}
